--- a/server/public/index.html
+++ b/server/public/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>React FTW!</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet"> 
+  <link rel="stylesheet" href="/main.css">
 </head>
 <body>
   <div id="app"></div>
